syntax = "proto3";

package FileService;

option csharp_namespace = "GrpcNodeServer";

service NodeServices {
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
  rpc UpdateFile(UpdateFileRequest) returns (UpdateFileResponse);
  rpc DownloadFile(DownloadFileRequest) returns (DownloadFileResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  rpc WhereToReplicateFiles(ReplicateFilesRequest) returns (ReplicateFilesResponse);
}

message UploadFileRequest {
	string file_id = 1;
	bytes file_content = 2;
}

message UploadFileResponse {
	bool status = 1;
	string message = 2;
}

message UpdateFileRequest {
	string file_id = 1;
	bytes new_content = 2;
}

message UpdateFileResponse {
	bool status = 1;
	string message = 2;
}

message DownloadFileRequest {
	string file_id = 1;
}

message DownloadFileResponse {
	bytes file_content = 1;
}

message DeleteFileRequest {
	string file_id = 1;
}

message DeleteFileResponse {
	bool status = 1;
	string message = 2;
}

message ReplicateFilesRequest {
	repeated string target_nodes = 1;
}

message ReplicateFilesResponse {
	bool status = 1;
	string message = 2;
}
